Add JRE and upgrade Python version